<?xml version="1.0"?>
<package format="2">
  <name>lbrmed_bringup</name>
  <version>0.0.1</version>
  <description>Launch files to start the whole robot setup</description>
  <maintainer email="t.redick@irt.rwth-aachen.de">Tim Redick</maintainer>
  <author email="jannik.haas@rwth-aachen.de">Jannik Haas</author>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cartesian_controllers</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>lbrmed_control</exec_depend>
  <exec_depend>lbrmed_description</exec_depend>
  <exec_depend>lbrmed_hw_fri</exec_depend>
  <exec_depend>lbrmed_moveit_config</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_control_boilerplate</exec_depend>
  <exec_depend>rqt_controller_manager</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
