<?xml version="1.0"?>
<package format="2">
  <name>lbrmed_control</name>
  <version>0.0.1</version>
  <description>Reusable controller config and launch files</description>
  <maintainer email="t.redick@irt.rwth-aachen.de">Tim Redick</maintainer>
  <author email="jannik.haas@rwth-aachen.de">Jannik Haas</author>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cartesian_compliance_controller</exec_depend>
  <exec_depend>cartesian_motion_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>ros_control_boilerplate</exec_depend>

  <depend>actionlib</depend>
  <depend>lbrmed_msgs</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>kdl_parser</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <export>
    <controller_interface plugin="${prefix}/lbrmed_control_plugin.xml" />
  </export>
</package>
