<?xml version="1.0"?>
<package format="2">
  <name>lbrmed_description</name>
  <version>0.0.1</version>
  <description>URDFs and macros for the LBR Med 14</description>
  <maintainer email="t.redick@irt.rwth-aachen.de">Tim Redick</maintainer>
  <author email="jannik.haas@rwth-aachen.de">Jannik Haas</author>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
